--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+            name="description"
+            content="kybe.xyz kybe kybe.xyz is a personal website from kybe. with some utility tools like cryptography"
+    />
     <title>kybe.xyz</title>
   <body>
     <div id="root"></div>
