--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
             name="description"
-            content="kybe.xyz kybe kybe.xyz is a personal website from kybe. with some utility tools like cryptography"
+            content="kybe.xyz kybe 2kybe3 | this is kybe's personal website @everyone"
     />
     <title>kybe.xyz</title>
   <body>
